--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,6 +1,13 @@
 site_name: Diogo André Silvares Dias
 site_author: das-dias
 site_description: "A personal landing page built on top of MkDocs documentation framework."
+site_url: https://das-dias.github.io/
+
+validation:
+  omitted_files: warn
+  absolute_links: warn  # Or 'relative_to_docs' - new in MkDocs 1.6
+  unrecognized_links: warn
+
 nav:
   - Home: index.md
   - Miscellaneous: misc.md
